# Zatorius-Synth

./: CMakeLists.txt  README.md  generateWavetable.cpp  global.h  graphics.cpp  graphics.h  main.cpp
